# orangeandoliveco.in

./: .gitignore  README.md  hugo.toml  pyproject.toml
.github/workflows/: build.yml
data/: config.toml
layouts/: index.html
layouts/_default/: baseof.html
layouts/items/: single.html
layouts/menu/: list.html
layouts/partials/: icon-instagram.html  icon-whatsapp.html
scripts/: build.sh
src/: code.js  config.py  constants.py  download.py  generate.py  generate_invoice.py  generate_pdf.py  utils.py
static/: style.css
templates/: _icons.html  base.html  index.html  invoice.html  item.html  menu-pdf.html
