[project]
name = "orangeandoliveco-in"
version = "0.1.0"
description = "Generate the site oranngeoliveco.in"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "google-api-python-client>=2.185.0",
    "google-auth>=2.41.1",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "jinja2>=3.1.6",
    "pillow-heif>=1.1.1",
    "pydantic>=2.11.5",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
]
